Fix bug for nav on mobile

--- a/general.sass
+++ b/general.sass
@@ -57,8 +57,8 @@ button
 
 
 .hidden
-  display: none
-  visibility: hidden
+  display: none !important
+  //visibility: hidden
 
 
 .fade-out
